--- a/config/attributefix-common.toml
+++ b/config/attributefix-common.toml
@@ -197,3 +197,14 @@
 	#Range: 4.9E-324 ~ 1.7976931348623157E308
 	max = 65536.0
 
+#Values for the environmental:stealth attribute.
+[environmental_stealth]
+	#Whether or not this attribute should be modified.
+	enabled = true
+	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
+	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	min = 0.0
+	#The maximum value for the attribute.
+	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	max = 65536.0
+
