--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -31,6 +31,8 @@ create:pressing
 create:sandpaper_polishing
 create:sawing
 create:spout_filling
-minecraft:firing
-minecraft:woodcutting
 farmersdelight:decomposition
+charm:firing
+charm:woodcutting
+environmental:baking
+environmental:sawing
