--- a/config/artifacts-common.toml
+++ b/config/artifacts-common.toml
@@ -4,7 +4,7 @@
 [campsite]
 	#Probability for an ore vein to generate underneath a campsite
 	#Range: 0 ~ 100
-	campsite_ore_chance = 25
+	campsite_ore_chance = 1
 	#The minimum y-level at which a campsite can generate
 	#Range: 1 ~ 255
 	campsite_min_y = 1
@@ -17,10 +17,11 @@
 	#Range: 0 ~ 100
 	campsite_mimic_chance = 30
 	#List of biome IDs in which campsites are not allowed to generate. End and nether biomes are excluded by default.
+	# To blacklist all biomes from a single mod, use 'modid:*'
 	biome_blacklist = ["minecraft:void"]
 	#Per-chunk probability (as a percentage) a campsite is attempted to be generated. Not every attempt succeeds, this also depends on the density and shape of caves
 	#Range: 0 ~ 100
-	campsite_chance = 8
+	campsite_chance = 4
 
 [items]
 	#Cooldown in ticks for the Everlasting Beef and Eternal Steak items
