--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -11,7 +11,6 @@ Serene Seasons
 Structure Gel API
 The Conjurer
 Wall-Jump!
-Waystones
 Alex's Mobs
 Create
 Artifacts
@@ -30,5 +29,6 @@ Neapolitan
 Savage & Ravage
 The Endergetic Expansion
 Upgrade Aquatic
-Antique Atlas
 Elenai Dodge 2
+Abnormals Delight
+Environmental
