Beta 1.2.9  - Updated Abnormals Delight     1.0.1   -> 1.0.0  - Updated Architectury API      1.8.130 -> 1.8.128  - Updated Collective            2.8     -> 2.4  - Updated Repurposed Structures 2.4.6   -> 2.4.4
 - Removed Antique Atlas
 - Removed Antique Waystones
 - Removed Damage Tilt
 - Removed Towers Of The Wild
 - Removed Waystones

--- a/config/attributefix-common.toml
+++ b/config/attributefix-common.toml
@@ -203,7 +203,7 @@
 	enabled = true
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
 	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	min = 0.0
+	min = 4.9E-324
 	#The maximum value for the attribute.
 	#Range: 4.9E-324 ~ 1.7976931348623157E308
 	max = 65536.0
