--- a/config/repurposed_structures-common.toml
+++ b/config/repurposed_structures-common.toml
@@ -5,7 +5,7 @@
 	# no Repurposed Structures structure to spawn in.
 	# Separate multiple entries with a comma.
 	#
-	#Example: "minecraft:the_end,awesome_mod:awesome_dimension"
+	# Example: "minecraft:the_end,awesome_mod:awesome_dimension"
 	blacklistedDimensions = "the_bumblezone:the_bumblezone"
 
 	["Mod-wide Impacting Options"."Feature Options"]
@@ -18,7 +18,7 @@
 			# Add the ID/resource location of the biome you don't want
 			# RS's boulders to spawn in. Separate each ID with a comma ,
 			#
-			#Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
+			# Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
 			blacklistedBoulderBiomes = ""
 			#
 			# How many Giant Boulders per chunk. (Can be decimal too)
@@ -47,30 +47,26 @@
 
 		["Mod-wide Impacting Options"."Structure Options".Igloos]
 			#
-			# Add Grassy Igloos to modded biomes that are
-			# most likely grassy fields or temperate forests.
+			# Add Grassy Igloos to modded biomes that are most likely grassy fields or temperate forests.
 			addGrassyIglooToModdedBiomes = true
 			#
 			# Add the ID/resource location of the biome you don't want
 			# RS's Igloos to spawn in. Separate each ID with a comma ,
 			#
-			#Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
+			# Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
 			blacklistedIglooBiomes = ""
 			#
 			# How rare are Stone Igloos in Giant Tree Taiga biomes.
-			# 
 			# 1 for spawning in most chunks and 1001 for no spawn.
 			#Range: 1 ~ 1001
 			stoneIglooMaxChunkDistance = 20
 			#
 			# How rare are Grassy Igloos in Plains and Forests.
-			# 
 			# 1 for spawning in most chunks and 1001 for no spawn.
 			#Range: 1 ~ 1001
 			grassyIglooMaxChunkDistance = 20
 			#
-			# Add Stone Igloos to modded biomes that are
-			# most likely Giant Tree Taiga variants.
+			# Add Stone Igloos to modded biomes that are most likely Giant Tree Taiga variants.
 			addStoneIglooToModdedBiomes = true
 
 		["Mod-wide Impacting Options"."Structure Options"."Jungle Fortress"]
@@ -80,7 +76,6 @@
 			#
 			# How often Silverfish Blocks will generate in Jungle Fortress as a percentage.
 			# Note: Mossy Stone Bricks block cannot be infected by Silverfish
-			# 
 			# 0 for no Silverfish Blocks and 100 for max spawnrate.
 			#Range: 0.0 ~ 100.0
 			silverfishSpawnrate = 0.5
@@ -92,11 +87,10 @@
 			# Add the ID/resource location of the biome you don't want
 			# RS's Jungle Fortresses to spawn in. Separate each ID with a comma ,
 			#
-			#Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
+			# Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
 			blacklistedFortressBiomes = ""
 			#
 			# How rare are Jungle Fortresses.
-			# 
 			# 1 for spawning in most chunks and 1001 for no spawn.
 			#Range: 1 ~ 1001
 			jungleFortressMaxChunkDistance = 32
@@ -105,17 +99,18 @@
 			addJungleFortressToModdedBiomes = true
 
 		["Mod-wide Impacting Options"."Structure Options"."Ruined Portals"]
-			#Add End themed ruined portals to modded End category biomes.
+			#
+			# Add End themed ruined portals to modded End category biomes.
 			addRuinedPortalEndToModdedBiomes = true
 			#
 			# Add the ID/resource location of the biome you don't want
 			# RS's Ruined Portals to spawn in. Separate each ID with a comma ,
 			#
-			#Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
+			# Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
 			blacklistedRuinedPortalsBiomes = ""
-			#How rare are End themed Ruined Portals in
-			#End category biomes. 1 for spawning in most
-			#chunks and 1001 for none.
+			#
+			# How rare are End themed Ruined Portals in End category biomes. 1 for spawning in most
+			# chunks and 1001 for none.
 			#Range: 1 ~ 1001
 			ruinedPortalEndMaxChunkDistance = 57
 
@@ -124,13 +119,14 @@
 			# Add the ID/resource location of the biome you don't want
 			# RS's Ruins to spawn in. Separate each ID with a comma ,
 			#
-			#Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
+			# Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
 			blacklistedRuinsBiomes = ""
-			#How rare are Nether Ruins. 1 for spawning in most
-			#chunks and 1001 for none.
+			#
+			# How rare are Nether Ruins. 1 for spawning in most chunks and 1001 for none.
 			#Range: 1 ~ 1001
 			ruinsNetherMaxChunkDistance = 35
-			#Add Nether Ruins to modded Nether category biomes.
+			#
+			# Add Nether Ruins to modded Nether category biomes.
 			addRuinsNetherToModdedBiomes = true
 
 		["Mod-wide Impacting Options"."Structure Options".Cities]
@@ -138,12 +134,13 @@
 			# Add the ID/resource location of the biome you don't want
 			# RS's Cities to spawn in. Separate each ID with a comma ,
 			#
-			#Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
+			# Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
 			blacklistedCitiesBiomes = ""
-			#How rare are Nether Cities. 1 for spawning in most
-			#chunks and 1001 for none.
+			#
+			# How rare are Nether Cities. 1 for spawning in most chunks and 1001 for none.
 			#Range: 1 ~ 1001
 			citiesNetherMaxChunkDistance = 160
-			#Add Nether Cities to modded Nether category biomes.
+			#
+			# Add Nether Cities to modded Nether category biomes.
 			addCitiesNetherToModdedBiomes = true
 
