Beta 2.0.0-pre1.1  - Updated Minecraft Forge 36.0.43 -> 36.0.44
 - Added Abundance
 - Added Bayou Blues
 - Added Better Biome Blend
 - Added Chocolate Fix
 - Added FerriteCore
 - Added Notes

 - Updated Alex's Mobs                      1.6.0    -> 1.7.0
 - Updated Artifacts                        2.8.2    -> 2.8.3
 - Updated Buzzier Bees                     3.0.0    -> 3.0.1
 - Updated Collective                       2.8      -> 2.9
 - Updated Controlling                      7.0.0.13 -> 7.0.0.14
 - Updated Leap                             1.0.1    -> 1.1.0
 - Updated Personality                      1.0.0    -> 1.0.2
 - Updated Repurposed Structures (Forge)    2.4.6    -> 2.4.7
 - Updated Savage & Ravage                  3.0.0    -> 3.1.0
 - Updated Smooth Boot (Forge)              1.2.0    -> 1.2.2
 - Updated YUNG's Better Mineshafts (Forge) 2.0.1    -> 2.0.2

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "version": "1.16.5",
     "modLoaders": [
       {
-        "id": "forge-36.0.43",
+        "id": "forge-36.0.44",
         "primary": true
       }
     ]
@@ -11,332 +11,12 @@
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
   "name": "Slightly Vanilla Flavoured",
-  "version": "1.2.9",
+  "version": "2.0.0-pre1.1",
   "author": "Ramoddi",
   "files": [
     {
-      "projectID": 386415,
-      "fileID": 3103750,
-      "required": true
-    },
-    {
-      "projectID": 228525,
-      "fileID": 3170154,
-      "required": true
-    },
-    {
-      "projectID": 238222,
-      "fileID": 3192904,
-      "required": true
-    },
-    {
-      "projectID": 271740,
-      "fileID": 3172881,
-      "required": true
-    },
-    {
-      "projectID": 232131,
-      "fileID": 3066044,
-      "required": true
-    },
-    {
-      "projectID": 337396,
-      "fileID": 3175092,
-      "required": true
-    },
-    {
-      "projectID": 285612,
-      "fileID": 3211323,
-      "required": true
-    },
-    {
-      "projectID": 324674,
-      "fileID": 3220790,
-      "required": true
-    },
-    {
-      "projectID": 381736,
-      "fileID": 3154941,
-      "required": true
-    },
-    {
-      "projectID": 382016,
-      "fileID": 3221772,
-      "required": true
-    },
-    {
-      "projectID": 326895,
-      "fileID": 3171113,
-      "required": true
-    },
-    {
-      "projectID": 237701,
-      "fileID": 3105779,
-      "required": true
-    },
-    {
-      "projectID": 295319,
-      "fileID": 3193207,
-      "required": true
-    },
-    {
-      "projectID": 418863,
-      "fileID": 3132023,
-      "required": true
-    },
-    {
-      "projectID": 442962,
-      "fileID": 3221492,
-      "required": true
-    },
-    {
-      "projectID": 261251,
-      "fileID": 3101531,
-      "required": true
-    },
-    {
-      "projectID": 419699,
-      "fileID": 3222916,
-      "required": true
-    },
-    {
-      "projectID": 404465,
-      "fileID": 3214262,
-      "required": true
-    },
-    {
-      "projectID": 282313,
-      "fileID": 3200373,
-      "required": true
-    },
-    {
-      "projectID": 348521,
-      "fileID": 3210411,
-      "required": true
-    },
-    {
-      "projectID": 245755,
-      "fileID": 3222129,
-      "required": true
-    },
-    {
-      "projectID": 354339,
-      "fileID": 3198395,
-      "required": true
-    },
-    {
-      "projectID": 387580,
-      "fileID": 3057272,
-      "required": true
-    },
-    {
-      "projectID": 233019,
-      "fileID": 3031978,
-      "required": true
-    },
-    {
-      "projectID": 355458,
-      "fileID": 3154937,
-      "required": true
-    },
-    {
-      "projectID": 366263,
-      "fileID": 3100986,
-      "required": true
-    },
-    {
-      "projectID": 426097,
-      "fileID": 3134516,
-      "required": true
-    },
-    {
-      "projectID": 442719,
-      "fileID": 3222472,
-      "required": true
-    },
-    {
-      "projectID": 308653,
-      "fileID": 3118466,
-      "required": true
-    },
-    {
-      "projectID": 395078,
-      "fileID": 3183888,
-      "required": true
-    },
-    {
-      "projectID": 362393,
-      "fileID": 3154934,
-      "required": true
-    },
-    {
-      "projectID": 396744,
-      "fileID": 3135437,
-      "required": true
-    },
-    {
-      "projectID": 411705,
-      "fileID": 3077428,
-      "required": true
-    },
-    {
-      "projectID": 388992,
-      "fileID": 3221635,
-      "required": true
-    },
-    {
-      "projectID": 331936,
-      "fileID": 3220917,
-      "required": true
-    },
-    {
-      "projectID": 380136,
-      "fileID": 3132033,
-      "required": true
-    },
-    {
-      "projectID": 361579,
-      "fileID": 3138786,
-      "required": true
-    },
-    {
-      "projectID": 264353,
-      "fileID": 3103028,
-      "required": true
-    },
-    {
-      "projectID": 227795,
-      "fileID": 3178423,
-      "required": true
-    },
-    {
-      "projectID": 220318,
-      "fileID": 3181401,
-      "required": true
-    },
-    {
-      "projectID": 291509,
-      "fileID": 3154938,
-      "required": true
-    },
-    {
-      "projectID": 328085,
-      "fileID": 3167531,
-      "required": true
-    },
-    {
-      "projectID": 238891,
-      "fileID": 3221841,
-      "required": true
-    },
-    {
-      "projectID": 406201,
-      "fileID": 3181314,
-      "required": true
-    },
-    {
-      "projectID": 441114,
-      "fileID": 3210104,
-      "required": true
-    },
-    {
-      "projectID": 402616,
-      "fileID": 3159331,
-      "required": true
-    },
-    {
-      "projectID": 378802,
-      "fileID": 3171697,
-      "required": true
-    },
-    {
-      "projectID": 349447,
-      "fileID": 3155826,
-      "required": true
-    },
-    {
-      "projectID": 420913,
-      "fileID": 3158412,
-      "required": true
-    },
-    {
-      "projectID": 340583,
-      "fileID": 3170047,
-      "required": true
-    },
-    {
-      "projectID": 370782,
-      "fileID": 3100345,
-      "required": true
-    },
-    {
-      "projectID": 260262,
-      "fileID": 3086049,
-      "required": true
-    },
-    {
-      "projectID": 368293,
-      "fileID": 3222423,
-      "required": true
-    },
-    {
-      "projectID": 388800,
-      "fileID": 3187811,
-      "required": true
-    },
-    {
-      "projectID": 347529,
-      "fileID": 3220595,
-      "required": true
-    },
-    {
-      "projectID": 312353,
-      "fileID": 3214070,
-      "required": true
-    },
-    {
-      "projectID": 438668,
-      "fileID": 3180991,
-      "required": true
-    },
-    {
-      "projectID": 391858,
-      "fileID": 3104550,
-      "required": true
-    },
-    {
-      "projectID": 280510,
-      "fileID": 3170246,
-      "required": true
-    },
-    {
-      "projectID": 306549,
-      "fileID": 3185503,
-      "required": true
-    },
-    {
-      "projectID": 69162,
-      "fileID": 3155824,
-      "required": true
-    },
-    {
-      "projectID": 243121,
-      "fileID": 3221260,
-      "required": true
-    },
-    {
       "projectID": 291874,
       "fileID": 3202233,
-      "required": true
-    },
-    {
-      "projectID": 398521,
-      "fileID": 3188508,
-      "required": true
-    },
-    {
-      "projectID": 415974,
-      "fileID": 3217938,
       "required": true
     },
     {
@@ -345,143 +25,8 @@
       "required": true
     },
     {
-      "projectID": 355589,
-      "fileID": 3154936,
-      "required": true
-    },
-    {
-      "projectID": 389665,
-      "fileID": 3175671,
-      "required": true
-    },
-    {
-      "projectID": 351441,
-      "fileID": 3066596,
-      "required": true
-    },
-    {
-      "projectID": 399090,
-      "fileID": 3192032,
-      "required": true
-    },
-    {
-      "projectID": 342584,
-      "fileID": 3223012,
-      "required": true
-    },
-    {
-      "projectID": 308240,
-      "fileID": 3113122,
-      "required": true
-    },
-    {
-      "projectID": 371402,
-      "fileID": 3100355,
-      "required": true
-    },
-    {
-      "projectID": 272515,
-      "fileID": 3218942,
-      "required": true
-    },
-    {
-      "projectID": 353399,
-      "fileID": 3155825,
-      "required": true
-    },
-    {
-      "projectID": 301051,
-      "fileID": 3088871,
-      "required": true
-    },
-    {
-      "projectID": 250363,
-      "fileID": 3128555,
-      "required": true
-    },
-    {
-      "projectID": 382216,
-      "fileID": 3218058,
-      "required": true
-    },
-    {
-      "projectID": 365045,
-      "fileID": 3158874,
-      "required": true
-    },
-    {
-      "projectID": 307152,
-      "fileID": 3217078,
-      "required": true
-    },
-    {
-      "projectID": 347595,
-      "fileID": 3220590,
-      "required": true
-    },
-    {
-      "projectID": 309927,
-      "fileID": 3186427,
-      "required": true
-    },
-    {
-      "projectID": 377794,
-      "fileID": 3193800,
-      "required": true
-    },
-    {
-      "projectID": 280294,
-      "fileID": 3103648,
-      "required": true
-    },
-    {
-      "projectID": 377798,
-      "fileID": 3107953,
-      "required": true
-    },
-    {
-      "projectID": 430988,
-      "fileID": 3214651,
-      "required": true
-    },
-    {
-      "projectID": 426558,
-      "fileID": 3213812,
-      "required": true
-    },
-    {
-      "projectID": 291936,
-      "fileID": 3073336,
-      "required": true
-    },
-    {
-      "projectID": 421850,
-      "fileID": 3186128,
-      "required": true
-    },
-    {
-      "projectID": 60089,
-      "fileID": 3202662,
-      "required": true
-    },
-    {
-      "projectID": 353434,
-      "fileID": 3181436,
-      "required": true
-    },
-    {
-      "projectID": 410497,
-      "fileID": 3103152,
-      "required": true
-    },
-    {
-      "projectID": 250398,
-      "fileID": 3200753,
-      "required": true
-    },
-    {
-      "projectID": 316881,
-      "fileID": 3175855,
+      "projectID": 328085,
+      "fileID": 3167531,
       "required": true
     },
     {
@@ -490,8 +35,493 @@
       "required": true
     },
     {
+      "projectID": 388800,
+      "fileID": 3187811,
+      "required": true
+    },
+    {
+      "projectID": 261251,
+      "fileID": 3101531,
+      "required": true
+    },
+    {
+      "projectID": 347595,
+      "fileID": 3220590,
+      "required": true
+    },
+    {
+      "projectID": 342584,
+      "fileID": 3223776,
+      "required": true
+    },
+    {
+      "projectID": 378802,
+      "fileID": 3171697,
+      "required": true
+    },
+    {
+      "projectID": 452344,
+      "fileID": 3225590,
+      "required": true
+    },
+    {
+      "projectID": 452345,
+      "fileID": 3225675,
+      "required": true
+    },
+    {
+      "projectID": 291936,
+      "fileID": 3073336,
+      "required": true
+    },
+    {
+      "projectID": 308653,
+      "fileID": 3118466,
+      "required": true
+    },
+    {
+      "projectID": 411705,
+      "fileID": 3077428,
+      "required": true
+    },
+    {
+      "projectID": 404465,
+      "fileID": 3214262,
+      "required": true
+    },
+    {
+      "projectID": 361579,
+      "fileID": 3138786,
+      "required": true
+    },
+    {
+      "projectID": 354339,
+      "fileID": 3198395,
+      "required": true
+    },
+    {
+      "projectID": 355458,
+      "fileID": 3226433,
+      "required": true
+    },
+    {
+      "projectID": 69162,
+      "fileID": 3155824,
+      "required": true
+    },
+    {
+      "projectID": 446253,
+      "fileID": 3226720,
+      "required": true
+    },
+    {
+      "projectID": 295319,
+      "fileID": 3193207,
+      "required": true
+    },
+    {
+      "projectID": 382216,
+      "fileID": 3218058,
+      "required": true
+    },
+    {
+      "projectID": 368293,
+      "fileID": 3227337,
+      "required": true
+    },
+    {
+      "projectID": 245755,
+      "fileID": 3222129,
+      "required": true
+    },
+    {
+      "projectID": 280294,
+      "fileID": 3103648,
+      "required": true
+    },
+    {
       "projectID": 283644,
       "fileID": 3172794,
+      "required": true
+    },
+    {
+      "projectID": 272515,
+      "fileID": 3218942,
+      "required": true
+    },
+    {
+      "projectID": 260262,
+      "fileID": 3086049,
+      "required": true
+    },
+    {
+      "projectID": 442962,
+      "fileID": 3221492,
+      "required": true
+    },
+    {
+      "projectID": 377794,
+      "fileID": 3193800,
+      "required": true
+    },
+    {
+      "projectID": 406201,
+      "fileID": 3181314,
+      "required": true
+    },
+    {
+      "projectID": 377798,
+      "fileID": 3107953,
+      "required": true
+    },
+    {
+      "projectID": 228525,
+      "fileID": 3170154,
+      "required": true
+    },
+    {
+      "projectID": 396744,
+      "fileID": 3135437,
+      "required": true
+    },
+    {
+      "projectID": 395078,
+      "fileID": 3183888,
+      "required": true
+    },
+    {
+      "projectID": 381736,
+      "fileID": 3226442,
+      "required": true
+    },
+    {
+      "projectID": 233019,
+      "fileID": 3031978,
+      "required": true
+    },
+    {
+      "projectID": 291509,
+      "fileID": 3154938,
+      "required": true
+    },
+    {
+      "projectID": 306549,
+      "fileID": 3185503,
+      "required": true
+    },
+    {
+      "projectID": 421850,
+      "fileID": 3186128,
+      "required": true
+    },
+    {
+      "projectID": 388992,
+      "fileID": 3221635,
+      "required": true
+    },
+    {
+      "projectID": 349447,
+      "fileID": 3155826,
+      "required": true
+    },
+    {
+      "projectID": 365045,
+      "fileID": 3158874,
+      "required": true
+    },
+    {
+      "projectID": 308240,
+      "fileID": 3113122,
+      "required": true
+    },
+    {
+      "projectID": 355589,
+      "fileID": 3154936,
+      "required": true
+    },
+    {
+      "projectID": 416306,
+      "fileID": 3166929,
+      "required": true
+    },
+    {
+      "projectID": 309927,
+      "fileID": 3186427,
+      "required": true
+    },
+    {
+      "projectID": 307152,
+      "fileID": 3217078,
+      "required": true
+    },
+    {
+      "projectID": 340583,
+      "fileID": 3170047,
+      "required": true
+    },
+    {
+      "projectID": 353399,
+      "fileID": 3155825,
+      "required": true
+    },
+    {
+      "projectID": 380136,
+      "fileID": 3132033,
+      "required": true
+    },
+    {
+      "projectID": 398521,
+      "fileID": 3188508,
+      "required": true
+    },
+    {
+      "projectID": 243121,
+      "fileID": 3221260,
+      "required": true
+    },
+    {
+      "projectID": 250363,
+      "fileID": 3128555,
+      "required": true
+    },
+    {
+      "projectID": 301051,
+      "fileID": 3088871,
+      "required": true
+    },
+    {
+      "projectID": 399090,
+      "fileID": 3192032,
+      "required": true
+    },
+    {
+      "projectID": 419699,
+      "fileID": 3222916,
+      "required": true
+    },
+    {
+      "projectID": 391858,
+      "fileID": 3104550,
+      "required": true
+    },
+    {
+      "projectID": 353434,
+      "fileID": 3181436,
+      "required": true
+    },
+    {
+      "projectID": 220318,
+      "fileID": 3181401,
+      "required": true
+    },
+    {
+      "projectID": 250398,
+      "fileID": 3223560,
+      "required": true
+    },
+    {
+      "projectID": 438668,
+      "fileID": 3180991,
+      "required": true
+    },
+    {
+      "projectID": 366263,
+      "fileID": 3100986,
+      "required": true
+    },
+    {
+      "projectID": 389665,
+      "fileID": 3227909,
+      "required": true
+    },
+    {
+      "projectID": 264353,
+      "fileID": 3103028,
+      "required": true
+    },
+    {
+      "projectID": 280510,
+      "fileID": 3170246,
+      "required": true
+    },
+    {
+      "projectID": 362393,
+      "fileID": 3154934,
+      "required": true
+    },
+    {
+      "projectID": 429235,
+      "fileID": 3222545,
+      "required": true
+    },
+    {
+      "projectID": 370782,
+      "fileID": 3100345,
+      "required": true
+    },
+    {
+      "projectID": 420913,
+      "fileID": 3224252,
+      "required": true
+    },
+    {
+      "projectID": 238222,
+      "fileID": 3192904,
+      "required": true
+    },
+    {
+      "projectID": 348521,
+      "fileID": 3210411,
+      "required": true
+    },
+    {
+      "projectID": 337396,
+      "fileID": 3175092,
+      "required": true
+    },
+    {
+      "projectID": 386415,
+      "fileID": 3103750,
+      "required": true
+    },
+    {
+      "projectID": 237701,
+      "fileID": 3105779,
+      "required": true
+    },
+    {
+      "projectID": 232131,
+      "fileID": 3066044,
+      "required": true
+    },
+    {
+      "projectID": 256087,
+      "fileID": 3191743,
+      "required": true
+    },
+    {
+      "projectID": 430988,
+      "fileID": 3214651,
+      "required": true
+    },
+    {
+      "projectID": 285612,
+      "fileID": 3211323,
+      "required": true
+    },
+    {
+      "projectID": 312353,
+      "fileID": 3225672,
+      "required": true
+    },
+    {
+      "projectID": 371402,
+      "fileID": 3223288,
+      "required": true
+    },
+    {
+      "projectID": 415974,
+      "fileID": 3227802,
+      "required": true
+    },
+    {
+      "projectID": 426558,
+      "fileID": 3224639,
+      "required": true
+    },
+    {
+      "projectID": 442719,
+      "fileID": 3222472,
+      "required": true
+    },
+    {
+      "projectID": 402616,
+      "fileID": 3159331,
+      "required": true
+    },
+    {
+      "projectID": 387580,
+      "fileID": 3057272,
+      "required": true
+    },
+    {
+      "projectID": 282313,
+      "fileID": 3200373,
+      "required": true
+    },
+    {
+      "projectID": 382016,
+      "fileID": 3221772,
+      "required": true
+    },
+    {
+      "projectID": 271740,
+      "fileID": 3172881,
+      "required": true
+    },
+    {
+      "projectID": 60089,
+      "fileID": 3202662,
+      "required": true
+    },
+    {
+      "projectID": 326895,
+      "fileID": 3171113,
+      "required": true
+    },
+    {
+      "projectID": 238891,
+      "fileID": 3221841,
+      "required": true
+    },
+    {
+      "projectID": 324674,
+      "fileID": 3220790,
+      "required": true
+    },
+    {
+      "projectID": 316881,
+      "fileID": 3175855,
+      "required": true
+    },
+    {
+      "projectID": 347529,
+      "fileID": 3220595,
+      "required": true
+    },
+    {
+      "projectID": 331936,
+      "fileID": 3220917,
+      "required": true
+    },
+    {
+      "projectID": 441114,
+      "fileID": 3210104,
+      "required": true
+    },
+    {
+      "projectID": 351441,
+      "fileID": 3066596,
+      "required": true
+    },
+    {
+      "projectID": 227795,
+      "fileID": 3178423,
+      "required": true
+    },
+    {
+      "projectID": 410497,
+      "fileID": 3103152,
+      "required": true
+    },
+    {
+      "projectID": 426097,
+      "fileID": 3134516,
+      "required": true
+    },
+    {
+      "projectID": 418863,
+      "fileID": 3132023,
       "required": true
     }
   ],
