--- a/config/repurposed_structures-strongholds.toml
+++ b/config/repurposed_structures-strongholds.toml
@@ -3,8 +3,7 @@
 	#
 	# Add the ID/resource location of the biome you don't want
 	# RS's strongholds to spawn in. Separate each ID with a comma ,
-	#
-	# Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
+	#   Example: "minecraft:ice_spikes,awesome_mod:awesome_biome"
 	blacklistedStrongholdBiomes = ""
 	#
 	# Make Mob Spawners generate in rooms other than the Portal Room in Strongholds.
@@ -21,9 +20,7 @@
 	# Controls whether loot chests spawn or not in the Stronghold.
 	lootChestsSH = true
 	#
-	# Makes vanilla Strongholds no longer spawn at all.
-	# Will not affect Repurposed Structures's own Stonebrick Stronghold.
-	# If BetterStrongholds mod is on, this config has no effect as is treated as false.
+	# Makes vanilla Strongholds no longer spawn at all. Will not affect Repurposed Structures's own Stonebrick Stronghold. If BetterStrongholds mod is on, this config has no effect as is treated as false.
 	turnOffVanillaStrongholds = true
 
 	[Stronghold.Nether]
@@ -31,7 +28,6 @@
 		# Minimum Y height that Nether stronghold's starting point can spawn at. 
 		# Default is 35.
 		# Note: Strongholds will spawn between min and max y height set in config.
-		#
 		#Range: 0 ~ 255
 		netherStrongholdMinHeight = 33
 		#
@@ -60,9 +56,7 @@
 
 	[Stronghold.Stonebrick]
 		#
-		# Add Stonebrick-styled Stronghold to all modded non-Nether biomes
-		# even if they have don't have vanilla Strongholds. It will replace
-		# the vanilla Strongholds in those biomes if this option is on.
+		# Add Stonebrick-styled Stronghold to all modded non-Nether biomes even if they have don't have vanilla Strongholds. It will replace the vanilla Strongholds in those biomes if this option is on.
 		addStonebrickStrongholdToModdedBiomes = true
 		#
 		# How rare are Chains in this Stronghold. (Can have Lantern attached)
@@ -75,10 +69,7 @@
 		#Range: 0.0 ~ 100.0
 		silverfishSpawnrateSH = 0.8
 		#
-		# Add Stonebrick-styled Stronghold which replaces vanilla Strongholds in any
-		# vanilla non-Nether biome. This option does not affect Nether Strongholds.
-		# If this is set to true and turnOffVanillaStrongholds is off, RS's Stonebrick
-		# Strongholds will still be added to vanilla biomes.
+		# Add Stonebrick-styled Stronghold which replaces vanilla Strongholds in any vanilla non-Nether biome. This option does not affect Nether Strongholds. If this is set to true and turnOffVanillaStrongholds is off, RS's Stonebrick Strongholds will still be added to vanilla biomes.
 		allowStonebrickStrongholdToVanillaBiomes = true
 		#
 		# How rare are Stonebrick-styled Strongholds.
