--- a/config/attributefix-common.toml
+++ b/config/attributefix-common.toml
@@ -2,10 +2,10 @@
 #Values for the minecraft:generic.max_health attribute.
 [minecraft_generic_max_health]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 1.0
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -13,10 +13,10 @@
 #Values for the minecraft:generic.follow_range attribute.
 [minecraft_generic_follow_range]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -24,10 +24,10 @@
 #Values for the minecraft:generic.knockback_resistance attribute.
 [minecraft_generic_knockback_resistance]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -35,10 +35,10 @@
 #Values for the minecraft:generic.movement_speed attribute.
 [minecraft_generic_movement_speed]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -46,10 +46,10 @@
 #Values for the minecraft:generic.flying_speed attribute.
 [minecraft_generic_flying_speed]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -57,10 +57,10 @@
 #Values for the minecraft:generic.attack_damage attribute.
 [minecraft_generic_attack_damage]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -68,10 +68,10 @@
 #Values for the minecraft:generic.attack_knockback attribute.
 [minecraft_generic_attack_knockback]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -79,10 +79,10 @@
 #Values for the minecraft:generic.attack_speed attribute.
 [minecraft_generic_attack_speed]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -90,10 +90,10 @@
 #Values for the minecraft:generic.armor attribute.
 [minecraft_generic_armor]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -101,10 +101,10 @@
 #Values for the minecraft:generic.armor_toughness attribute.
 [minecraft_generic_armor_toughness]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -112,10 +112,10 @@
 #Values for the minecraft:generic.luck attribute.
 [minecraft_generic_luck]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -123,10 +123,10 @@
 #Values for the minecraft:zombie.spawn_reinforcements attribute.
 [minecraft_zombie_spawn_reinforcements]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
@@ -134,77 +134,11 @@
 #Values for the minecraft:horse.jump_strength attribute.
 [minecraft_horse_jump_strength]
 	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	min = 4.9E-324
 	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
+	#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 	max = 65536.0
 	#Whether or not this attribute should be modified.
 	enabled = true
-
-#Values for the forge:swim_speed attribute.
-[forge_swim_speed]
-	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	min = 4.9E-324
-	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	max = 65536.0
-	#Whether or not this attribute should be modified.
-	enabled = true
-
-#Values for the forge:nametag_distance attribute.
-[forge_nametag_distance]
-	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	min = 4.9E-324
-	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	max = 65536.0
-	#Whether or not this attribute should be modified.
-	enabled = true
-
-#Values for the forge:entity_gravity attribute.
-[forge_entity_gravity]
-	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	min = 4.9E-324
-	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	max = 65536.0
-	#Whether or not this attribute should be modified.
-	enabled = true
-
-#Values for the forge:reach_distance attribute.
-[forge_reach_distance]
-	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	min = 4.9E-324
-	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	max = 65536.0
-	#Whether or not this attribute should be modified.
-	enabled = true
-
-#Values for the savageandravage:explosive_damage_reduction attribute.
-[savageandravage_explosive_damage_reduction]
-	#Whether or not this attribute should be modified.
-	enabled = true
-	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	min = 4.9E-324
-	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	max = 65536.0
-
-#Values for the environmental:stealth attribute.
-[environmental_stealth]
-	#Whether or not this attribute should be modified.
-	enabled = true
-	#The minimum vallue for the attribute. Changing this may have unforseen consequences.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	min = 4.9E-324
-	#The maximum value for the attribute.
-	#Range: 4.9E-324 ~ 1.7976931348623157E308
-	max = 65536.0
 
