--- a/config/repurposed_structures-temples.toml
+++ b/config/repurposed_structures-temples.toml
@@ -70,6 +70,7 @@
 	addBadlandsPyramidToModdedBiomes = true
 	#
 	# Add Snowy Pyramid to modded snowy biomes.
+	# 1 for spawning in most chunks and 1001 for none.
 	#Range: 1 ~ 1001
 	pyramidSnowyMaxChunkDistance = 37
 	#
