--- a/config/allurement-common.toml
+++ b/config/allurement-common.toml
@@ -1,21 +1,67 @@
 
 [enchantments]
-	#Armor enchantment that heals the user when collecting experience
-	enableAlleviating = false
-	#Crossbow enchantment that pulls targets towards the user
-	enableReeling = true
-	#Gear enchantment that very slowly repairs items over time
-	enableReforming = false
-	#Boots enchantment that creates a shockwave when taking fall damage
-	enableShockwave = true
 
-[enchanting]
-	#Allow horse armor to be enchanted
-	enchantableHorseArmor = true
+	[enchantments.alleviating]
+		#Armor enchantment that heals the user when collecting experience
+		"Enable Alleviating" = true
+		#How much the experience value is multiplied by into health
+		"Healing factor" = 0.25
 
-[experience]
-	#Remove the amount of experience per level increasing (experimental)
-	removeLevelScaling = false
-	#The amount of experience per level
-	experiencePerLevel = 50
+	[enchantments.reeling]
+		#Crossbow enchantment that pulls targets towards the user
+		"Enable Reeling" = true
+		#How much the entity is affected on the horizontal axis
+		"Horizontal factor" = 0.5
+		#How much the entity is affected on the vertical axis
+		"Vertical factor" = 0.25
+
+	[enchantments.reforming]
+		#Gear enchantment that very slowly repairs items over time
+		"Enable Reforming" = true
+		#How many ticks it takes a reforming item to repair
+		"Reforming tick rate" = 600
+
+	[enchantments.shockwave]
+		#Boots enchantment that creates a shockwave when taking fall damage
+		"Enable Shockwave" = true
+
+	[enchantments.vengeance]
+		#Armor enchantment that stores incoming damage and applies it to user's next attack
+		"Enable Vengeance" = true
+		#How much the damage taken with vengeance is multiplied for attacks
+		"Damage factor" = 0.025
+
+[tweaks]
+
+	[tweaks.horse_armor]
+		#Allow horse armor to be enchanted
+		"Enchantable horse armor" = true
+		#If horse armor can appear enchanted when found in loot tables
+		"Generates in loot tables" = true
+		#Which loot tables horse armor can't appear enchanted in
+		"Unenchanted loot tables" = ["minecraft:chests/village/village_weaponsmith", "minecraft:chests/stronghold_corridor", "minecraft:chests/nether_bridge"]
+
+	[tweaks.riptide]
+		#Allow Riptide to function when in cauldrons
+		"Riptide works in cauldrons" = true
+
+	[tweaks.soul_speed]
+		#Instead of losing durability as you run, Soul Speed makes incoming damage increase when on Soul Speed blocks
+		"Soul Speed change" = true
+		#How much damage is multiplied when hurt on Soul Speed blocks
+		"Damage factor" = 1.5
+
+	[tweaks.infinity]
+		#If Infinity requires an arrow in the player's inventory in order to shoot
+		"Infinity requires arrows" = false
+
+	[tweaks.protection]
+		#Remove the base Protection enchantment, requiring players to choose between the other types
+		"Disable Protection" = false
+
+	[tweaks.level_scaling]
+		#Remove the amount of experience per level increasing (experimental)
+		"Remove level scaling" = false
+		#The amount of experience per level, if level scaling is removed (experimental)
+		"Experience per level" = 50
 
