--- a/config/charmonium-common.toml
+++ b/config/charmonium-common.toml
@@ -6,4 +6,42 @@
 [Sounds]
 	#Volume of ambient sounds is multiplied by this amount.
 	"Volume multiplier" = 0.5
+	#Dimensions that have outdoor ambience. Overworld is included by default.
+	"Outdoor dimensions" = []
+	#If true, plays ambient sounds when the player is less than sea-level and light level is less than 11.
+	"Cave ambience" = true
+	#If true, plays ambient sounds when the player is lower than Y 32 and light level is less than 10.
+	"Deep ambience" = true
+	#If true, plays ambience when the player is higher than Y 150.
+	"High ambience" = true
+	#If true, plays ambient sounds when the player is inside a mineshaft.
+	"Mineshaft ambience" = true
+	#If true, plays ambience when the player is within a village.
+	"Village ambience" = true
+	#If true, plays ambience when the player is in the End dimension.
+	"End ambience" = true
+	#If true, plays ambience when the player is in a badlands biome.
+	"Badlands ambience" = true
+	#If true, plays ambience when the player is in a beach biome.
+	"Beach ambience" = true
+	#If true, plays ambience when the player is in a desert biome.
+	"Desert ambience" = true
+	#If true, plays ambience when the player is in a forest biome.
+	"Forest ambience" = true
+	#If true, plays ambience when the player is in an icy biome.
+	"Icy ambience" = true
+	#If true, plays ambience when the player is in a jungle biome.
+	"Jungle ambience" = true
+	#If true, plays ambience when the player is an ocean biome but not underwater.
+	"Ocean ambience" = true
+	#If true, plays ambience when the player is in a mountains biome.
+	"Mountains ambience" = true
+	#If true, plays ambience when the player is in a plains biome.
+	"Plains ambience" = true
+	#If true, plays ambience when the player is in a savanna biome.
+	"Savanna ambience" = true
+	#If true, plays ambience when the player is in a swamp biome.
+	"Swamp ambience" = true
+	#If true, plays ambience when the player is in a taiga biome.
+	"Taiga ambience" = true
 
